# gguf-parser-web

./: .gitignore  LICENSE  README.md  app.py  devices.json  main.py  pyproject.toml  requirements.txt
app/: devices.py  main.py  models.py  tables.py  utils.py
tests/: test_url.py  test_utils.py
