[project]
name = "gguf-parser-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio==5.3.0",
    "orjson==3.10.10",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.pylint]
max-line-length = 180

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
